--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>SHINE</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="d-flex flex-column min-vh-100"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
